# src/main/java/com/piere/bootcamp/bankaccounts/model/document/DebitCard.java
@@ -1,0 +1,64 @@
+package com.piere.bootcamp.bankaccounts.model.document;
+
+import java.io.Serializable;
+import java.time.LocalDate;
+import java.util.List;
+
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Field;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonInclude.Include;
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import com.fasterxml.jackson.datatype.jsr310.deser.LocalDateDeserializer;
+import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateSerializer;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+@JsonInclude(Include.NON_NULL)
+@EqualsAndHashCode(callSuper = false)
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class DebitCard implements Serializable {
+    
+    private static final long serialVersionUID = 1L;
+
+    @Id
+    private String id;
+
+    @Field(name = "client_id")
+    private String clientId;
+
+    @Field(name = "main_account_id")
+    private String mainAccountId;
+
+    @Field(name = "associated_account_ids")
+    private List<String> associatedAccountIds;
+
+    @JsonSerialize(using = LocalDateSerializer.class)
+    @JsonDeserialize(using = LocalDateDeserializer.class)
+    @Field(name = "expiration_date")
+    private LocalDate expirationDate;
+
+     @Field(name = "movement_ids")
+    private List<String> movementIds;
+
+    @JsonSerialize(using = LocalDateSerializer.class)
+    @JsonDeserialize(using = LocalDateDeserializer.class)
+    @Field(name = "create_at")
+    private LocalDate createAt;
+
+    @JsonSerialize(using = LocalDateSerializer.class)
+    @JsonDeserialize(using = LocalDateDeserializer.class)
+    @Field(name = "end_at")
+    private LocalDate endAt;
+}
