# src/main/java/com/piere/bootcamp/bankaccounts/model/dto/OperationDto.java
@@ -2,9 +2,13 @@ package com.piere.bootcamp.bankaccounts.model.dto;
 
 import java.io.Serializable;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonInclude.Include;
+
 import lombok.Data;
 
 @Data
+@JsonInclude(Include.NON_NULL)
 public class OperationDto implements Serializable {
     
     private static final long serialVersionUID = 1L;
@@ -14,4 +18,8 @@ public class OperationDto implements Serializable {
     private String toAccountCode;
 
     private Double amount;
-}
+
+    public OperationDto(Double amount) {
+        this.amount = amount;
+    }
+} 
